[package]
name = "rulaub-backend"
version = "1.0.0"
license = "Apache-2.0/MIT"
authors = ["Christian Riedel <cielquan@protonmail.com>"]
edition = "2018"

[lib]
name = "rulaub_backend"

[dependencies]
diesel = { version = "1.4.6", features = ["sqlite", "chrono"] }
libsqlite3-sys = { version = "0.20.1", features = ["bundled"]}
chrono = "0.4"
dotenv = "0.15.0"
tracing = "0.1.25"

tracing-subscriber = "0.2.17"
tracing-appender = "0.1"
