[package]
name = "rulaub-backend"
version = "1.0.0"
license = "Apache-2.0/MIT"
authors = ["Christian Riedel <cielquan@protonmail.com>"]
edition = "2018"

[lib]
name = "rulaub_backend"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
diesel = { version = "1.4", features = ["sqlite", "chrono"] }
libsqlite3-sys = { version = "0.22", features = ["bundled"] }
chrono = "0.4"

# Bin dependencies
dotenv = "0.15"
tracing-subscriber = "0.3"
tracing-appender = "0.2"

# take a look at
directories = "4.0"
config = { version = "0.11", features = ["toml"] }
    notify = "4.0"
    lazy_static = "1.4"
