[package]
name = "rulaub-backend"
version = "1.0.0"
description = "A Tauri App"
license = "Apache-2.0/MIT"
authors = ["Christian Riedel <cielquan@protonmail.com>"]
repository = ""
default-run = "rulaub-backend"
edition = "2021"

[lib]
name = "rulaub_backend"

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = ["api-all"] }

anyhow = "1.0"
thiserror = "1.0"

directories = "4.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

parking_lot = { version = "0.11", features = ["nightly"] }

config = { version = "0.11", features = ["toml"] }
lazy_static = "1.4"
notify = "4.0"
serde_derive = "1.0"
toml = "0.5"

diesel = { version = "1.4", features = ["sqlite", "chrono"] }
libsqlite3-sys = { version = "0.22", features = ["bundled"] }
chrono = "0.4"

# Bin dependencies
dotenv = "0.15"
tracing-appender = "0.2"


[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
