[package]
  name = "rulaub-backend"
  version = "1.0.0"
  description = "Backend for RUlaub a vacation calandar for teams"
  license = "Apache-2.0/MIT"
  authors = ["Christian Riedel <cielquan@protonmail.com>"]
  repository = "https://github.com/Cielquan/RUlaub"
  default-run = "rulaub-backend"
  edition = "2021"

[lib]
  name = "rulaub_backend"

[build-dependencies]
  tauri-build = { version = "1.0.0-rc.2", features = [] }

[dependencies]
  tauri = { version = "1.0.0-rc.2", features = ["api-all"] }
  anyhow = "1.0"
  thiserror = "1.0"
  lazy_static = "1.4"
  parking_lot = { version = "0.12", features = ["nightly"] }
  serde = { version = "1.0", features = ["derive"] }
  serde_json = "1.0"
  serde_derive = "1.0"
  directories = "4.0"
  glob = "0.3.0"
  notify = "5.0.0-pre.13"
  toml = "0.5"
  tracing = "0.1"
  tracing-appender = "0.2"
  tracing-subscriber = { version = "0.3", features = ["env-filter"] }
  diesel = { version = "1.4", features = ["sqlite", "chrono"] }
  diesel_migrations = "1.4"
  libsqlite3-sys = { version = "0.22", features = ["bundled"] }
  chrono = "0.4"
  reqwest = { version = "0.11.9", features = ["json"] }

  # Bin dependencies
  dotenv = "0.15"
  tokio = { version = "1.14", features = ["full"] }


[features]
  default = [ "custom-protocol" ]
  custom-protocol = [ "tauri/custom-protocol" ]
  win_sdk_ver = []
  win_sdk_path = []
